--- a/.env
+++ b/.env
@@ -1,14 +1,11 @@
-NODE_ENV=development
-DB_HOST=psql-sigebi-qa.postgres.database.azure.com
+DB_HOST= psql-sigebidb-qa.postgres.database.azure.com
 POSTGRES_PORT=5432
 POSTGRES_USER=dbsigebiadmon
-DB_PASS='s1g3b1@22'
+DB_PASS='aW5kM3AyQDIzJDAx'
 DB_DIALECT=postgres
-POSTGRES_DB=psql-sigebi
-DB_NAME_DEVELOPMENT=psql-sigebi
-DB_NAME_PRODUCTION=psql-sigebi
+POSTGRES_DB=psql-sigbq01
+DB_NAME_DEVELOPMENT=psql-sigbq01
+DB_NAME_PRODUCTION=psql-sigbq01
 JWTKEY=asdasdasd2332342sdfsd
 TOKEN_EXPIRATION=48h
 BEARER=Bearer
-MS_HOST=127.0.0.1
-MS_PORT=3000
